fix spacing around client name and client description divs

--- a/source/stylesheets/styles.css.scss
+++ b/source/stylesheets/styles.css.scss
@@ -240,12 +240,14 @@ body {
 .current_clients, .full_clients {
   .client_name {
     height: 3em;
+    margin-top: 1em;
     a { vertical-align: bottom;}
     h5 { margin-bottom: 0; }
   }
   .client_desc {
     color: $faded;
-    margin-top: 1em;
+    margin-top: 1.5em;
+    margin-bottom: 1em;
   }
 }
 
